--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,12 +7,34 @@
   --errorColor: #ff4a4a;
   --primary-picColor: #efb6b2;
   --secondary-picColor: #4e4e4e;
+  --color-gold: #c59d5f;
+  --color-grey-1: #102a42;
+  --color-grey-3: #324d67;
+  --color-grey-5: #617d98;
+  --color-black: #222;
+  --color-white: #fff;
+  --color-red-dark: #bb2525;
+  --color-red-light: #e66b6b;
+  --color-green-dark: #25bb32;
+  --color-green-light: #6be675;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --max-width: 1170px;
+  --fixed-width: 620px;
 }
 
 body {
   /* font-family: "Roboto Condensed", sans-serif; */
-  font-family: "Noto Serif";
-  color: var(--secondary-picColor);
+  /* font-family: "Noto Serif"; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", /* Emojis*/ "Segoe UI Emoji",
+    /* Emojis*/ "Segoe UI Symbol"; /* Emojis*/
+
+  color: var(--color-grey-1);
+  line-height: 1.5;
 }
 .app {
   max-width: 960px;
@@ -122,8 +144,185 @@ nav ul li {
   align-items: center;
 }
 
+/* _______________________________Restaurant Menu__________________ */
+/* ____________________________NavBar__Restaurant Menu_ */
+.menuSectionTitle {
+  text-align: center;
+  margin-bottom: 2rem;
+  letter-spacing: var(--spacing);
+}
+.underline {
+  width: 7rem;
+  height: 0.25rem;
+  background: var(--color-gold);
+  margin-left: auto;
+  margin-right: auto;
+}
+.btn-container {
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.filter-btn {
+  background: transparent;
+  border-color: transparent;
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  color: var(--color-gold);
+  cursor: pointer;
+  transition: var(--transition);
+  border-radius: var(--radius);
+}
+/* __________________Restaurant Main Section________________________________ */
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  grid-gap: 3rem 2rem;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+.menu-item {
+  display: grid;
+}
+.menuPhoto {
+  object-fit: cover;
+  width: 100%;
+  border: 0.25rem solid var(--color-gold);
+  border-radius: var(--radius);
+  display: block;
+}
+.item-info-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px dotted var(--color-grey-5);
+}
+.item-info-header h4 {
+  margin-bottom: 0.5rem;
+  justify-content: space-between;
+}
+.price {
+  color: var(--color-gold);
+}
+.item-info p {
+  color: var(--color-grey-5);
+}
+
+@media only screen and (min-width: 768px) {
+  body {
+    font-size: 1rem;
+  }
+  .menu-item {
+    grid-template-columns: 225px 1fr;
+    grid-gap: 0 1.25rem;
+    gap: 0 1.25rem;
+    max-width: 40rem;
+  }
+  .menuPhoto {
+    height: 175px;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+}
+
 @media only screen and (max-width: 480px) {
+  body {
+  }
   .loginForm {
     align-items: center;
   }
+}
+/* ______________________________Projects ProjectPage___________________________ */
+
+.course-link {
+  text-align: center;
+}
+.course-link-click {
+  display: inline-block;
+  font-size: 1rem;
+  margin: 2rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  padding: 0.5rem 1rem;
+  border-radius: var(--radius);
+  transition: var(--transition);
+  background-color: var(--primary-mainColor);
+  color: var(--color-black);
+}
+.section {
+  width: 90vw;
+  margin: 0 auto;
+  padding: 5rem 0;
+  max-width: var(--max-width);
+}
+.project-section-center {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 0 auto 2rem;
+  display: grid;
+  grid-gap: 3rem 2rem;
+  gap: 3rem 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+}
+.project {
+  transition: var(--transition);
+  box-shadow: var(--light-shadow);
+  border-radius: var(--radius);
+}
+.project-image-wrapper {
+  height: 15rem;
+  position: relative;
+  overflow: hidden;
+}
+.project footer {
+  padding: 1.25rem 1.5rem;
+  text-align: center;
+  background-color: var(--color-white);
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+}
+.project footer h4 {
+  margin-bottom: 0;
+  color: var(--color-grey-5);
+}
+/* _______________________Reviews_______________________________________ */
+.title-reviews {
+  text-transform: capitalize;
+  margin-bottom: 0.75rem;
+  color: var(--color-grey-3);
+  text-align: center;
+}
+.title-reviews h2 {
+  font-weight: 500;
+}
+.title-reviews span {
+  font-size: 0.85em;
+  margin-right: 1rem;
+  font-weight: 700;
+  color: var(--primary-mainColor);
+}
+.section-center-reviews {
+  margin: 4rem auto 0;
+  width: 80vw;
+  height: 450px;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+.nextSlide {
+  transform: translateX(100%);
+}
+.lastSlide {
+  transform: translateX(-100%);
 }
